--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "symfony/filesystem": "~2.4",
     "symfony/var-dumper": "~2.6",
     "symfony/dependency-injection": "~2.6",
-    "symfony/config": "~2.6"
+    "symfony/config": "~2.6",
+    "symfony/http-foundation": "~2.6",
+    "fabpot/goutte": "~2.0"
   },
   "autoload": {
     "psr-4": {"": "src"}
