--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "symfony/dependency-injection": "~2.6",
     "symfony/config": "~2.6",
     "symfony/http-foundation": "~2.6",
-    "fabpot/goutte": "~2.0"
+    "fabpot/goutte": "~2.0",
+    "phpunit/phpunit": "~4.6"
   },
   "autoload": {
     "psr-4": {"": "src"}
