--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "symfony/config": "~2.6",
     "symfony/http-foundation": "~2.6",
     "fabpot/goutte": "~2.0",
-    "phpunit/phpunit": "~4.6"
+    "phpunit/phpunit": "~4.6",
+    "php": ">=5.3.0",
+    "ext-inotify": "*"
   },
   "autoload": {
     "psr-4": {"": "src"}
