--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
   "require": {
     "symfony/console": "~2.5@dev",
     "symfony/filesystem": "~2.4",
+    "symfony/process": "~2.4",
     "symfony/var-dumper": "~2.6",
     "symfony/dependency-injection": "~2.6",
     "symfony/config": "~2.6",
