--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "fabpot/goutte": "~2.0",
     "phpunit/phpunit": "~4.6",
     "php": ">=5.3.0",
-    "ext-inotify": "*"
+    "ext-inotify": "*",
+    "joetannenbaum/phpushbullet": "~1.0"
   },
   "autoload": {
     "psr-4": {"": "src"}
