Read country code from config

--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -18,7 +18,7 @@ parameters:
          Czech:
          Danish:
          Dutch:
-         English:
+         English: en
          Estonian:
          Euskera:
          Finnish:
