Add config for Addic7ed user

--- a/app/config/userConfig.yml.example
+++ b/app/config/userConfig.yml.example
@@ -1,3 +1,7 @@
 pushbullet:
   enable: false
   key: ...
+credentials:
+    username: YourAddic7edUsurname
+    password: YourAddic7edPassword
+    remember: true
