--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,11 @@
 {
+  "repositories":
+  [
+    {
+      "type": "vcs",
+      "url": "https://github.com/Thomas-Negrault/phpushbullet"
+    }
+  ],
   "require": {
     "symfony/console": "~2.5@dev",
     "symfony/filesystem": "~2.4",
@@ -11,7 +18,7 @@
     "phpunit/phpunit": "~4.6",
     "php": ">=5.3.0",
     "ext-inotify": "*",
-    "joetannenbaum/phpushbullet": "~1.0"
+    "joetannenbaum/phpushbullet": "dev-master"
   },
   "autoload": {
     "psr-4": {"": "src"}
