--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,11 @@
     "fabpot/goutte": "~2.0",
     "phpunit/phpunit": "~4.6",
     "php": ">=5.3.0",
-    "ext-inotify": "*",
     "joetannenbaum/phpushbullet": "dev-master"
+  },
+  "suggest":
+  {
+    "ext-inotify": "For using the monitor script"
   },
   "autoload": {
     "psr-4": {"": "src"}
