Move extensions to handle into config

--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -59,3 +59,7 @@ parameters:
          Turkish:
          Ukrainian:
          Vietnamese:
+    defaultExtensions:
+        - mkv
+        - mp4
+        - avi
